Module_3_lab_3A/upf-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: upf
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
